--- a/src/utils/languages/de/help_de.json
+++ b/src/utils/languages/de/help_de.json
@@ -1,311 +1,256 @@
 {
-  "__user": {
-
-  },
-
   "kick": [
-    "Kickt einen User vom Server.",
-    "\n**__Command:__** {p}kick < **`User`** > [ `Grund` ]"
+    "Kickt einen User vom derzeitigen Server."
   ],
   "ban": [
-    "Bannt einen User vom Server.",
-    "\n**__Command:__** {p}ban < **`User`** > [ `Grund` ]"
+    "Bannt einen User vom derzeitigen Server."
   ],
   "tempban": [
     "Bannt einen User temporär vom Server.",
-    "**__Zeiten:__** `h`, `d`, `mon`, `y`",
-    "\n**__Command:__** {p}tempban < **`User`** > < **`Zeit`** > [ `Grund` ]"
+    "{t}"
   ],
   "tempmute": [
     "Mutet einen User temporär auf dem Server.",
-    "**__Zeiten:__** [ `s`, `min`, `d`, `y` ]",
-    "\n**__Command:__** {p}tempmute < **`User`** > < **`Zeit`** > [ `Grund` ]"
-  ],
-  "clear": [
-    "Löscht eine bestimmte Anzahl von Nachrichten in einem Channel.",
-    "\n**__Command:__** {p}clear < **`Anzahl`** > [ `Grund` ]"
+    "{t}"
   ],
   "softban": [
-    "Bannt einen User und entbannt ihn danach sofort wieder.",
-    "\n**__Command:__** {p}softban < **`User`** > [ `Grund` ]"
+    "Bannt einen User vom Server und entbannt ihn danach wieder. Nützlich um einen User zu kicken und alle Nachrichten zu löschen."
   ],
   "massban": [
-    "Bannt mehrere User vom Server.",
-    "\n**__Command:__** {p}massban [ `Argumente` ]",
-    "\n**__Argumente:__**",
-    "`--channel` Channel, in welchem Nachrichten durchsucht werden",
-    "`--reason` Grund für die Bans (Benötigt)",
+    "Bannt mehrere User nach den ausgewählten Kriterien vom Server.",
+    "\n**__Kritieren:__**",
+    "`--channel` Channel zur Suche nach den Nachrichten",
+    "`--reason` Grund für die Bans (benötigt)",
     "`--created` Accounts die jünger als `x` Minuten sind",
     "`--joined` Accounts die vor `x` Minuten gejoint sind",
     "`--no-avatar` User ohne Avatar (Kein Argument)",
     "`--no-roles` User ohne Rolle (Kein Argument)",
-    "`--joined-before` User die vor der UserID gejoint sind",
-    "`--joined-after` User die nach der UserID gejoint sind",
-    "`--regex` Regex der Usernamen",
+    "`--joined-before` User die vor der gegebenen UserID gejoint sind",
+    "`--joined-after` User die nach der gegebenen UserID gejoint sind",
+    "`--regex` Regex für der Usernamen",
     "\n**Alle weiteren Argumente benötigen --channel**",
-    "`--contains` Was in der Nachricht vorkommt",
-    "`--starts`: Wie die Nachricht startet",
-    "`--ends`: Wie die Nachricht endet",
-    "`--search`: Wieviele Nachrichten durchsucht werden sollen (normal 100 max 2000)",
-    "`--after`: Nachrichten nach der MessageID",
-    "`--before`: Nachrichten vor der MessageID",
-    "`--files`: Ob die Nachricht eine Datei hat (Kein Argument)",
-    "`--embeds`: Ob die Nachricht Embeds hat (Kein Argument)"
+    "`--contains` Teilinhalt der Nachricht",
+    "`--starts`: wie die Nachricht anfängt",
+    "`--ends`: wie die Nachricht endet",
+    "`--search`: wie viele Nachrichten durchsucht werden sollen (normal 100 max 2000)",
+    "`--after`: Nachrichten die nach der MessageID geschrieben wurden",
+    "`--before`: Nachrichten die vor der MessageID geschrieben wurden",
+    "`--files`: wenn die Nachricht eine Datei hat (Kein Argument)",
+    "`--embeds`: wenn die Nachricht Embeds hat (Kein Argument)"
   ],
   "warn": [
-    "Warnt einen User und fügt ihn Punkte hinzu.",
-    "\n**__Command:__** {p}warn < **`User`** > < **`Punkte`** > [ `Grund` ]"
+    "Warnt einen User und fügt ihn die angegebenen Punkte hinzu."
   ],
   "level": [
-    "Zeigt sein eigenes Level oder das Level eines Users an.",
-    "\n**__Command:__** {p}level [ `User` ]"
+    "Zeigt das Level eines Users an."
   ],
   "top": [
-    "Zeigt die Top 10 User auf dem Server an.",
-    "\n**__Command:__** {p}top"
+    "Zeigt die besten 10 User auf dem Server."
   ],
   "prefix": [
-    "Ändert den Prefix auf dem Server.",
-    "\n**__Command:__** {p}prefix < **`Neuer Prefix`** >"
+    "Ändert den Prefix für diesen Server.",
+    "Erwähnungen funktionieren trotzdem noch."
   ],
   "info": [
-    "Gibt Informationen über einen User oder über sich selbst aus.",
-    "\n**__Command:__** {p}info [ `User` ]"
+    "Zeigt Informationen über einen User an."
   ],
   "server": [
-    "Gibt Informationen über einen Server aus.",
-    "\n**__Command:__** {p}server"
+    "Zeigt Informationen über einen Server an."
   ],
   "todayjoined": [
-    "Zeigt die Anzahl der User an, die heute auf dem User gejoint sind.",
-    "\n**__Command:__** {p}todayjoined"
+    "Zeigt die Anzahl der heute beigetretenen User an."
   ],
   "someone": [
-    "Gibt einen zufälligen User aus.",
-    "\n**__Command:__** {p}someone"
+    "Wählt einen zufälligen User auf dem Server aus."
   ],
   "joined": [
-    "Zeigt die Joinposition eines Users oder den User einer Joinposition aus.",
-    "\n**__Command:__** {p}joined [ `User` | `Position` ]"
+    "Zeigt die Join-Position eines Users oder den User einer Join-Position an."
   ],
   "bot": [
-    "Gibt Informationen über den Bot aus.",
-    "\n**__Command:__** {p}bot"
+    "Zeigt Informationen über den Bot an."
   ],
   "invite": [
-    "Schickt einen Invite, um den Bot auf einen Server einzuladen.",
-    "\n**__Command:__** {p}invite"
+    "Schickt eine Einladung um den Bot auf einen Server einzuladen."
   ],
   "ping": [
-    "Zeigt die Latenz des Bots zur Discord-API.",
-    "\n**__Command:__** {p}ping"
+    "Zeigt den Ping des Bots zur Discord-API."
   ],
   "rules": [
-    "Schickt Regeln in den aktuellen Channel.",
-    "\n**__Command:__** {p}rules"
+    "Schickt Regeln in den aktuellen Channel."
   ],
   "rules1": [
-    "Schickt Regeln in den aktuellen Channel.",
-    "\n**__Command:__** {p}rules1"
+    "Schickt Regeln in den aktuellen Channel."
   ],
   "color": [
-    "Gibt eine zufällige Farbe aus.",
-    "\n**__Command:__** {p}color"
+    "Gibt eine zufällig generierte Farbe aus."
   ],
   "minesweeper": [
-    "Generiert ein Minesweeper-Spiel mit Spoiler-Nachrichten.",
-    "\n**__Command:__** {p}minesweeper"
-  ],
-  "command": [
-    "Managen von den Custom-Commands",
-    "\n**__Command:__**",
-    " » {p}command add < **`Name`** > < **`Content`** >",
-    " » {p}command edit < **`Name`** > < **`Content`** >",
-    " » {p}command delete < **`Name`** >",
-    " » {p}command list",
-    "\n**__Beispiele:__**",
-    " » {p}command add Test Der Command funktioniert!",
-    " » {p}command edit Test Der Command funktioniert! :D",
-    " » {p}command delete Test"
+    "Generiert ein Minesweeper-Feld aus Spoiler-Nachrichten."
   ],
   "activate": [
-    "Aktiviert ein Modul und seine Commands.",
-    "\n**__Command:__**",
-    " » {p}activate fun",
-    " » {p}activate leveling",
-    " » {p}activate automoderation",
-    " » {p}activate welcomer",
-    " » {p}activate globalbans",
-    " » {p}activate logging",
-    " » {p}activate timer"
+    "Aktiviert ein Modul und seine Commands."
   ],
   "deactivate": [
-    "Deaktiviert ein Modul und seine Commands.",
-    "\n**__Command:__**",
-    " » {p}deactivate fun",
-    " » {p}deactivate leveling",
-    " » {p}deactivate automoderation",
-    " » {p}deactivate welcomer",
-    " » {p}deactivate globalbans",
-    " » {p}deactivate logging",
-    " » {p}deactivate timer"
+    "Deaktiviert ein Modul und seine Commands."
   ],
   "points": [
-    "Erlaubt das Abfragen von Punkten eines bestimmten Users.",
-    "\n**__Command:__** {p}points < **`User`** >"
+    "Zeigt die Automod-Punkte eines Users an."
   ],
   "coinflip": [
-    "Schmeißt eine Münze.",
-    "\n**__Command:__** {p}coinflip"
+    "Schmeißt eine Münze."
   ],
   "thisorthat": [
-    "Wählt eine Option aus.",
-    "\n**__Command:__** {p}thisorthat < **`Fragen`** >",
-    "\n**__Beispiel:__**",
-    " » {p}thisorthat Minecraft | Fortnite | Valorant"
+    "Wählt eine der gegebenen Optionen aus."
   ],
   "ship": [
-    "Passen die zwei User zusammen?",
-    "\n**__Command:__** {p}ship < **`User`** > [ `User` ]"
+    "Shippt zwei User."
   ],
   "slot": [
-    "Eine Slotmaschine. Glücksspiel, aber ohne Geld :o",
-    "\n**__Command:__** {p}slot"
+    "Eine Slotmaschine. Glücksspiel, aber ohne Geld :o"
   ],
   "rolemembers": [
-    "Gibt die Anzahl der User mit dieser Rolle aus.",
-    "\n**__Command:__** {p}rolemembers < **`Rolle`** >"
+    "Zeigt die Anzahl der User mit dieser Rolle an."
   ],
   "bin": [
-    "Wandelt eine Zahl in eine Binärzähl um.",
-    "\n**__Command:__** {p}bin < **`Nummer`** >"
+    "Wandelt eine Zahl in eine Binärzahl um."
   ],
   "hex": [
-    "Wandelt eine Zahl in eine Hexadezimalzahl um.",
-    "\n**__Command:__** {p}hex < **`Nummer`** >"
+    "Wandelt eine Zahl in eine Hexadezimalzahl um."
   ],
   "caseing": [
-    "Wandelt den Text in So EiNeN tExT uM.",
-    "\n**__Command:__** {p}caseing < **`Text`** >"
+    "Wandelt den Text in So EiNeN tExT uM."
   ],
   "reverse": [
-    ".mu txeT ned therD",
-    "\n**__Command:__** {p}reverse < **`Text`** >"
+    "Dreht den Text um. .mu txeT ned therD"
   ],
   "avatar": [
-    "Schickt den Avatar eines Users in den Channel.",
-    "\n**__Command:__** {p}avatar [ `User` ]"
+    "Zeigt den Avatar eines Users in groß."
   ],
   "resetlevel": [
-    "Resetet das Level eines Users.",
-    "\n**__Command:__** {p}resetlevel < **`User`** >"
+    "Setzt das Level eines Users zurück.",
+    "**Diese Aktion kann nicht rückgängig gemacht werden.**"
   ],
   "members": [
-    "Zeigt die Mitgliederanzahl des Discord an.",
-    "\n**__Command:__** {p}members"
+    "Zeigt die Mitgliederanzahl des Servers an."
   ],
   "dice": [
-    "Ein einfacher Würfel.",
-    "\n**__Command:__** {p}dice"
+    "Ein einfacher Würfel."
   ],
   "setupmute": [
-    "Stellt die Muterolle ein.",
-    "\n**__Command:__** {p}setupmute"
+    "Stellt die Muterolle für alle Channel ein."
   ],
   "resetpoints": [
-    "Setzt die Punkte eines Users zurück."
+    "Setzt die Automod-Punkte eines Users zurück."
   ],
   "mute": [
-    "Mutet einen User permanent.",
-    "\n**__Command:__** {p}mute < **`User`** > [ `Grund` ]"
+    "Mutet einen User permanent auf dem Server."
   ],
   "unmute": [
-    "Entmutet einen User.",
-    "\n**__Command:__** {p}unmute < **`User`** > [ `Grund` ]"
+    "Entmutet einen User auf dem Server."
     ],
   "slowmode": [
-    "Setzt den Slowmode für einen Channel.",
-    "\n**__Command:__** {p}slowmode [ `Sekunden` ]"
+    "Setzt einen Slowmode für einen Channel fest."
   ],
   "giveaway": [
     "Befehle um ein Giveaway zu führen.",
-    "\n**__Command:__**",
-    " » {p}giveaway start < **`Dauer`** > < **`Gewinner`** > < **`Channel`** > < **`Name`** >",
-    " » {p}giveaway stop < **`ID`** >",
-    " » {p}giveaway end < **`ID`** >",
-    "\n**__Infos:__**",
-    " » `{p}giveaway stop` bricht das Giveaway ab.",
-    " » `{p}giveaway end` beendet das Giveaway und wählt Gewinner aus.",
-    "\n**__Beispiele:__**",
-    " » {p}giveaway start 2h 1 #giveaways Coolen Stuff",
-    " » {p}giveaway start 1d 5 #giveaways 1 Monat Premium auf GommeHD.net",
-    " » {p}giveaway end 730526886110888422",
-    " » {p}giveaway stop 730526886110888422"
+    {
+      "start": [
+        "Startet ein Giveaway in einem bestimmten Channel.",
+        "{t}"
+      ],
+      "end": "Beendet ein Giveaway und lost die Gewinner aus.",
+      "stop": "Bricht das Giveaway ab und lost keine Gewinner aus."
+    }
   ],
   "pat": [
-    "Streichle einen User :D",
-    "\n**__Command:__** {p}pat < **`User`** >"
+    "Streichle einen User :D"
   ],
   "hug": [
-    "Umarme einen User :D",
-    "\n**__Command:__** {p}hug < **`User`** >"
+    "Umarme einen User :D"
   ],
   "highfive": [
-    "Gib einem User ein Highfive!",
-    "\n**__Command:__** {p}highfive < **`User`** >"
+    "Gib einem User ein Highfive!"
   ],
   "cry": [
-    "Traurig? Zeige es mit einem Gif.",
-    "\n**__Command:__** {p}cry"
+    "Traurig? Zeige es mit einem Gif."
   ],
   "rage": [
-    "Wütend? \uD83D\uDE21",
-    "\n**__Command:__** {p}rage"
+    "Wütend? \uD83D\uDE21"
   ],
   "levelroles": [
-    "Zeigt alle Rollen, die man mit dem Levelsystem erhalten kann.",
-    "\n**__Command:__** {p}levelroles"
+    "Zeigt alle Rollen an, die man durch das Levelsystem erhalten kann."
   ],
   "8ball": [
-    "Antwortet zufällig auf eine Ja/Nein Frage.",
-    "\n**__Command:__** {p}8ball < **`Frage`** >"
+    "Antwortet zufällig auf eine Ja/Nein Frage."
   ],
   "dashboard": [
-    "Der Link zum Dashboard des Bots.",
-    "\n**__Command:__** {p}dashboard"
+    "Der Link zum Dashboard des Bots."
   ],
   "reminder": [
-    "Setze eine Timer um deine Termine einzuhalten!",
-    "\n**__Commands:__**",
-    " » {p}reminder create < **`Dauer`** > < **`Text`** >",
-    " » {p}reminder list",
-    " » {p}reminder delete < **`ID`** >"
+    "Setze eine Timer um, deine Termine einzuhalten!",
+    {
+      "create": [
+        "Erstellt einen Timer. Du kannst maximal 25 pro Server besitzen.",
+        "{t}"
+      ],
+      "remove": "Löscht einen Timer.",
+      "list": "Listet alle Timer auf, die du auf diesem Server erstellt hast."
+    }
   ],
   "vote": [
-    "Vote für den Bot auf der TOP.GG Bot Liste.",
-    "\n**__Command:__** {p}vote"
+    "Vote für den Bot auf der TOP.GG Bot Liste."
   ],
   "unban": [
-    "Entbannt einen User",
-    "\n**__Command:__** {p}unban < **`User`** > [ `Grund` ]"
+    "Entbannt einen User auf dem Server."
   ],
   "cat": [
-    "Ohhh ist die süß <3",
-    "\n**__Command:__** {p}cat"
+    "Ohhh ist die süß <3"
   ],
   "check": [
-    "Zeigt derzeitige Warnungen oder Bestrafungen an.",
-    "\n**__Command:__** {p}unban < **`User`** >"
+    "Zeigt die derzeitigen Warnungen oder Bestrafungen an."
   ],
   "laugh": [
-    ":joy: :rofl:",
-    "\n**__Command:__** {p}laugh"
+    ":joy: :rofl:"
   ],
   "copyblacklist": [
-    "Kopiert die Blacklist eines anderen Servers. Du musst auf beiden Servern Admin sein.",
-    "\n**__Command:__** {p}copyblacklist < **`ServerID`** > [ `Überschreiben: Nein` ]",
-    "\n**__Beispiele:__**",
-    " » {p}copyblacklist 505438986672537620 True",
-    " » {p}copyblacklist 505438986672537620"
+    "Kopiert die Blacklist eines anderen Servers.",
+    "**Du musst auf beiden Servern Admin sein.**"
+  ],
+  "multiban": [
+    "Bannt mehrere User vom Server."
+  ],
+  "remove": [
+    "Durchsucht die angegebenen Nachrichten nach den Kriterien und löscht diese.",
+    {
+      "embeds": "Löscht alle Nachrichten die Embeds enthalten.",
+      "files": "Löscht alle Nachrichten die Dateien enthalten.",
+      "all": "Löscht alle Nachrichten.",
+      "user": "Löscht alle Nachrichten eines bestimmten Users.",
+      "contains": "Löscht alle Nachrichten die den String enthalten.",
+      "emoji": "Löscht alle Nachrichten die Emojis enthalten.",
+      "reactions": "Löscht alle Reaktionen der Nachrichten.",
+      "links": "Löscht alle Nachrichten die Links enthalten.",
+      "bot": "Löscht alle Nachrichten von Bots.",
+      "images": "Löscht alle Nachrichten die Bilder enthalten.",
+      "custom": [
+        "Löscht Nachrichten nach einem bestimmten Pattern.",
+        "\n__**Kriterien**__",
+        "`--user`: Name, Erwähnung oder ID eines Users",
+        "`--contains`: Teilinhalt der Nachricht",
+        "`--starts`: wie die Nachricht anfängt",
+        "`--ends`: wie die Nachricht endet",
+        "`--search`: Anzahl der durchsuchenden Nachricg (normal 100 max 2000)",
+        "`--after`: Nachrichten die nach der MessageID geschrieben wurden",
+        "`--before`: Nachrichten die vor der MessageID geschrieben wurden",
+        "\n**Flag Optionen (Keine Argumente):**",
+        "`--bot`: Wenn die Nachricht von einem Bot ist.",
+        "`--embeds`: wenn die Nachricht Embeds hat",
+        "`--files`: wenn die Nachricht eine Datei hat",
+        "`--emoji`: wenn die Nachricht Emojis enthält.",
+        "`--reactions`: wenn die Nachricht Reaktionen enthält.",
+        "`--or`: logisches ODER für alle Optionen.",
+        "`--not`: logisches NOT für alle Optionen."
+      ]
+    }
   ]
 }
