--- a/src/utils/languages/en/help_en.json
+++ b/src/utils/languages/en/help_en.json
@@ -1,295 +1,255 @@
 {
   "kick": [
-    "Kicks a user.",
-    "\n**__Command:__** {p}kick < **`user`** > [ `reason` ]"
+    "Kicks a user from the current guild."
   ],
   "ban": [
-    "Bans a user.",
-    "\n**__Command:__** {p}ban < **`user`** > [ `reason` ]"
+    "Bans a user from the current guild."
   ],
   "tempban": [
-    "Temporarily bans a user.",
-    "**__Zeiten:__** `h`, `d`, `mon`, `y`",
-    "\n**__Command:__** {p}tempban < **`user`** > < **`Zeit`** > [ `reason` ]"
+    "Temporarily bans a user from the guild.",
+    "{t}"
   ],
   "tempmute": [
-    "Mutes a user temporarily.",
-    "**__Zeiten:__** [ `s`, `min`, `d`, `y` ]",
-    "\n**__Command:__** {p}tempmute < **`user`** > < **`Zeit`** > [ `reason` ]"
-  ],
-  "clear": [
-    "Deletes a certain number of messages in a channel.",
-    "\n**__Command:__** {p}clear < **`Anzahl`** > [ `reason` ]"
+    "Temporarily mutes a user from the guild.",
+    "{t}"
   ],
   "softban": [
-    "Bans a user and then immediately unbans him again.",
-    "\n**__Command:__** {p}softban < **`user`** > [ `reason` ]"
+    "Bans a user from the guild and then unbans them again. Useful to kick a user and delete all messages."
   ],
   "massban": [
     "Bans multiple users from the server.",
-    "\n**__Command:__** {p}massban [ `arguments` ]",
-    "\n**__Arguments:__**",
-    "`--channel` channel in which messages are searched",
-    "`--reason` reason for the bans (required)",
-    "`--created` accounts that are younger than 'x' minutes",
-    "`--joined` accounts that joined `x` minutes ago",
-    "`--no-avatar` user without avatar (no argument)",
-    "`--no-roles` user without role (no argument)",
-    "`--joined-before` users that are joined before the given userid",
-    "`--joined-after` users who joined after the given userid",
-    "`--regex` Regex of the usernames",
+    "\n**__Criterias:__**",
+    "`--channel` Channel to search for message history",
+    "`--reason` the reason for the ban (required)",
+    "`--created` matches users whose accounts were created less than specified minutes ago",
+    "`--joined` matches users that joined less than specified minutes ago",
+    "`--no-avatar` matches users who have no avatar (no argument)",
+    "`--no-roles` matches users who have no role (no argument)",
+    "`--joined-before` matches users who joined before the member ID given",
+    "`--joined-after` matches users who joined after the member ID given",
+    "`--regex` Regex that usernames must match",
     "\n**All other arguments require --channel**",
-    "`--contains` what appears in the message",
-    "`--starts`: how the message starts",
-    "`--ends`: how the message ends",
-    "`--search`: how many messages should be searched (default 100; max 2000)",
-    "`--after`: messages after the given messageid",
-    "`--before`: messages before the given messageid",
-    "`--files`: whether the message has a file (no argument)",
-    "`--embeds`: whether the message has embeds (no argument)"
+    "`--contains` substring to search for in the message",
+    "`--starts`: substring to search if the message starts with",
+    "`--ends`: substring to search if the message ends with",
+    "`--search`: how many messages to search. Default 100. Max 2000",
+    "`--after`: Messages must come after this message ID",
+    "`--before`: Messages must come before this message ID",
+    "`--files`: checks if the message has attachments (no argument)",
+    "`--embeds`: checks if the message has embeds (no argument)"
   ],
   "warn": [
-    "Warns a user and adds points.",
-    "\n**__Command:__** {p}warn < **`user`** > < **`points`** > [ `reason` ]"
+    "Warns a user and adds the specified points."
   ],
   "level": [
-    "Shows his own level or the level of a user.",
-    "\n**__Command:__** {p}level [ `user` ]"
+    "Shows the level of a user."
   ],
   "top": [
-    "Shows the top 10 users on the server.",
-    "\n**__Command:__** {p}top"
+    "Shows the top 10 users on the guild."
   ],
   "prefix": [
-    "Changes the prefix on the server.",
-    "\n**__Command:__** {p}prefix < **`new prefix`** >"
+    "Changes the prefix for this guild.",
+    "Mentions still work."
   ],
   "info": [
-    "Outputs information about a user or about yourself.",
-    "\n**__Command:__** {p}info [ `user` ]"
+    "Shows information about a user."
   ],
   "server": [
-    "Outputs information about the current server.",
-    "\n**__Command:__** {p}server"
+    "Shows information about a guild."
   ],
   "todayjoined": [
-    "Shows the number of users that are joined today",
-    "\n**__Command:__** {p}todayjoined"
+    "Shows the number of users who have joined today."
   ],
   "someone": [
-    "Shows a random user.",
-    "\n**__Command:__** {p}someone"
+    "Selects a random user on the guild."
   ],
   "joined": [
-    "Shows the join position of a user or the user of a join position.",
-    "\n**__Command:__** {p}joined [ `user` | `position` ]"
+    "Shows the join position of a user or the user of a join position."
   ],
   "bot": [
-    "Shows information about the bot.",
-    "\n**__Command:__** {p}bot"
+    "Shows information about the bot."
   ],
   "invite": [
-    "Sends an invite to invite the bot to a server.",
-    "\n**__Command:__** {p}invite"
+    "Sends an invitation to invite the bot to a guild."
   ],
   "ping": [
-    "Shows the latency of the bot to the Discord API.",
-    "\n**__Command:__** {p}ping"
+    "Shows the ping of the bot to the Discord API"
   ],
   "rules": [
-    "Sends rules to the current channel.",
-    "\n**__Command:__** {p}rules"
+    "Sends rules to the current channel."
   ],
   "rules1": [
-    "Sends rules to the current channel.",
-    "\n**__Command:__** {p}rules1"
+    "Sends rules to the current channel."
   ],
   "color": [
-    "Shows a random color.",
-    "\n**__Command:__** {p}color"
+    "Outputs a randomly generated colour."
   ],
   "minesweeper": [
-    "Generates a Minesweeper game using spoilers.",
-    "\n**__Command:__** {p}minesweeper"
+    "Generates a minesweeper field from spoiler messages."
   ],
   "activate": [
-    "Activates a module and its commands.",
-    "\n**__Command:__**",
-    " » {p}activate fun",
-    " » {p}activate leveling",
-    " » {p}activate administration",
-    " » {p}activate welcomer",
-    " » {p}activate globalbans",
-    " » {p}activate logging",
-    " » {p}activate timer"
+    "Activates a module and its commands."
   ],
   "deactivate": [
-    "Deactivates a module and its commands.,",
-    "\n**__Command:__**",
-    " » {p}deactivate fun",
-    " » {p}deactivate leveling",
-    " » {p}deactivate administration",
-    " » {p}deactivate welcomer",
-    " » {p}deactivate globalbans",
-    " » {p}deactivate logging",
-    " » {p}deactivate timer"
+    "Deactivates a module and its commands."
   ],
   "points": [
-    "Query the points of a specific user.",
-    "\n**__Command:__** {p}points < **`user`** >"
+    "Query the points of a specific user."
   ],
   "coinflip": [
-    "Throws a coin.",
-    "\n**__Command:__** {p}coinflip"
+    "Throws a coin."
   ],
   "thisorthat": [
-    "Selects an option randomly.",
-    "\n**__Command:__** {p}thisorthat < **`questions`** >",
-    "\n**__Beispiel:__**",
-    " » {p}thisorthat Minecraft | Fortnite | Valorant"
+    "Selects one of the given options"
   ],
   "ship": [
-    "Do the two users like each other?",
-    "\n**__Command:__** {p}ship < **`user`** > [ `user` ]"
+    "Ships two users."
   ],
   "slot": [
-    "A slot machine. Gambling, but without money :o",
-    "\n**__Command:__** {p}slot"
+    "A slot machine. Gambling, but without money :o"
   ],
   "rolemembers": [
-    "Returns the number of users with this role.",
-    "\n**__Command:__** {p}rolemembers < **`Rolle`** >"
+    "Returns the number of users with this role."
   ],
   "bin": [
-    "Converts a number into a binary count.",
-    "\n**__Command:__** {p}bin < **`Nummer`** >"
+    "Converts a number into a binary count."
   ],
   "hex": [
-    "Converts a number into a hexadecimal number.",
-    "\n**__Command:__** {p}hex < **`Nummer`** >"
+    "Converts a number into a hexadecimal number."
   ],
   "caseing": [
-    "Converts the text into SuCh A tExT.",
-    "\n**__Command:__** {p}caseing < **`Text`** >"
+    "Converts the text into SuCh A tExT."
   ],
   "reverse": [
-    ".TxEt A hCuS otni txet eht strevnoC",
-    "\n**__Command:__** {p}reverse < **`Text`** >"
+    "Reverses the text. .txet eht sesreveR"
   ],
   "avatar": [
-    "Shows the avatar of a user.",
-    "\n**__Command:__** {p}avatar [ `user` ]"
+    "Shows the avatar of a user in large."
   ],
   "resetlevel": [
     "Resets the level of a user.",
-    "\n**__Command:__** {p}resetlevel < **`user`** >"
+    "**This action cannot be undone.**"
   ],
   "members": [
-    "Shows the number of members of the server.",
-    "\n**__Command:__** {p}members"
+    "Shows the number of members of the guild."
   ],
   "dice": [
-    "A simple dice.",
-    "\n**__Command:__** {p}dice"
+    "A simple dice."
   ],
   "setupmute": [
-    "Setup the mute role.",
-    "\n**__Command:__** {p}setupmute"
+    "Sets the mute role for all channels."
   ],
   "resetpoints": [
-   "Resets the points of a user.",
-    "\n**__Command:__** {p}resetpoints < **`user`** >"
+    "Resets a user's automod points."
   ],
   "mute": [
-    "Mutes a user permanently.",
-    "\n**__Command:__** {p}mute < **`user`** > [ `reason` ]"
+    "Mute a user permanently on the guild."
   ],
   "unmute": [
-    "Unmutes a user.",
-    "\n**__Command:__** {p}unmute < **`user`** > [ `reason` ]"
+    "Unmutes a user on the guild."
     ],
   "slowmode": [
-    "Sets a slow mode for a channel.",
-    "\n**__Command:__** {p}slowmode [ `seconds` ]"
+    "Sets a slow mode for a channel."
   ],
   "giveaway": [
     "Commands to run a giveaway.",
-    "\n**__Commands:__**",
-    " » {p}giveaway start < **`duration`** > < **`winners`** > < **`channel`** > < **`name`** >",
-    " » {p}giveaway stop < **`id`** >",
-    " » {p}giveaway end < **`id`** >",
-    "\n**__Infos:__**",
-    " » `{p}giveaway stop` cancels the giveaway",
-    " » `{p}giveaway end` ends the giveaway and chooses winners"
+    {
+      "start": [
+        "Starts a giveaway in a specific channel.",
+        "{t}"
+      ],
+      "end": "Finish a giveaway and draw the winners.",
+      "stop": "Cancels the giveaway and does not draw winners."
+    }
   ],
   "pat": [
-    "Pet a user.",
-    "\n**__Command:__** {p}pat < **`user`** >"
+    "Pet a user."
   ],
   "hug": [
-    "Hug a user.",
-    "\n**__Command:__** {p}hug < **`user`** >"
+    "Hug a user."
   ],
   "highfive": [
-    "Give a user a highfive!",
-    "\n**__Command:__** {p}highfive < **`user`** >"
+    "Give a user a highfive!"
   ],
   "cry": [
-    "Sad? Show it with a gif.",
-    "\n**__Command:__** {p}cry"
+    "Sad? Show it with a gif."
   ],
   "rage": [
-    "Angry? \uD83D\uDE21",
-    "\n**__Command:__** {p}rage"
+    "Angry? \uD83D\uDE21"
   ],
   "levelroles": [
-    "Shows all roles you can get with the level system.",
-    "\n**__Command:__** {p}levelroles"
+    "Shows all the roles you can get through the leveling system."
   ],
   "8ball": [
-    "Answers randomly to a yes/no question.",
-    "\n**__Command:__** {p}8ball < **`question`** >"
+    "Answers randomly to a yes/no question."
   ],
   "dashboard": [
-    "The link to the dashboard of the bot.",
-    "\n**__Command:__** {p}dashboard"
+    "The link to the dashboard of the bot."
   ],
   "reminder": [
     "Set a timer to meet your deadlines!",
-    "\n**__Commands:__**",
-    " » {p}reminder create < **`duration`** > < **`task`** >",
-    " » {p}reminder list",
-    " » {p}reminder delete < **`id`** >"
+    {
+      "create": [
+        "Creates a timer. You can have a maximum of 25 per guild.",
+        "{t}"
+      ],
+      "remove": "Deletes a timer.",
+      "list": "Lists all timers you have created on this guild."
+    }
   ],
   "vote": [
-    "Vote for the bot on the TOP.GG Bot list.",
-    "\n**__Command:__** {p}vote"
+    "Vote for the bot on the TOP.GG Bot list."
   ],
   "unban": [
-    "Unbans a user.",
-    "\n**__Command:__** {p}unban < **`user`** > [ `reason` ]"
+    "Unbans a user on the guild."
   ],
   "cat": [
-    "Ohhh is the sweet <3",
-    "\n**__Command:__** {p}cat"
+    "Ohhh is the sweet <3"
   ],
   "check": [
-    "Shows current warnings and punishments.",
-    "\n**__Command:__** {p}unban < **`user`** >"
+    "Shows the current warnings or punishments."
   ],
   "laugh": [
-    ":joy: :rofl:",
-    "\n**__Command:__** {p}laugh"
+    ":joy: :rofl:"
   ],
   "copyblacklist": [
-    "Copies the blacklist of another server. You must be an admin on both servers.",
-    "\n**__Command:__** {p}copyblacklist < **`guild id`** > [ `overwrite: no` ]",
-    "\n**__Beispiele:__**",
-    " » {p}copyblacklist 505438986672537620 True",
-    " » {p}copyblacklist 505438986672537620"
+    "Copies the blacklist of another server",
+    "**You must be admin on both guilds.**"
   ],
   "multiban": [
-    "Bans multiple users from a server.",
-    "\n**__Command:__** {p}multiban < **`UserIDs`** > [ `reason` ]"
+    "Bans multiple users from the guild."
+  ],
+  "remove": [
+    "Durchsucht die angegebenen Nachrichten nach den Kriterien und löscht diese.",
+    {
+      "embeds": "Deletes all messages that contain embeds.",
+      "files": "Deletes all messages that contain files.",
+      "user": "Deletes all messages of a specific user.",
+      "contains": "Deletes all messages that contain the string.",
+      "emoji": "Deletes all messages that contain emojis.",
+      "reactions": "Deletes all reactions of the messages.",
+      "links": "Deletes all messages that contain links.",
+      "bot": "Deletes all messages from bots.",
+      "images": "Deletes all messages that contain images.",
+      "custom": [
+        "Deletes messages according to a specific pattern.",
+        "\n__**Criterias**__",
+        "`--user`: mention or name of the user to remove.",
+        "`--contains`: substring to search for in the message.",
+        "`--starts`: substring to search if the message starts with.",
+        "`--ends`: substring to search if the message ends with.",
+        "`--search`: how many messages to search. Default 100. Max 2000.",
+        "`--after`: Messages must come after this message ID.",
+        "`--before`: Messages must come before this message ID.",
+        "Flag options (no arguments):",
+        "`--bot`: check if it's a bot user.",
+        "`--embeds`: check if the message has embeds.",
+        "`--files`: check if the message has attachments.",
+        "`--emoji`: check if the message has custom emoji.",
+        "`--reactions`: check if the message has reactions.",
+        "`--or`: logical OR for all options.",
+        "`--not`: logical NOT for all options."
+      ]
+    }
   ]
 }
